@@ -141,7 +141,7 @@ void Night::printAllImages (int year, int month, int day, XmlRpc::HttpParams *pa
 	const char * label_encoded = lb.c_str ();
 
 	float quantiles = params->getDouble ("q", DEFAULT_QUANTILES);
-	int chan = params->getInteger ("chan", DEFAULT_CHAN);
+	int chan = params->getInteger ("chan", ((XmlRpcd *) getMasterApp ())->defchan);
 
 	time_t from;
 	int64_t duration;
