@@ -1,3 +1,6 @@
+2011-10-26
+ * default channel in events file
+
 2011-10-25
  * added corrwerr command (for image processing scripts)
 
